seaqt/QtCore/gen_qdatetime.nim


proc fcQDate_isNull(self: pointer): bool {.importc: "QDate_isNull".}
proc fcQDate_isValid(self: pointer): bool {.importc: "QDate_isValid".}
proc fcQDate_year(self: pointer): cint {.importc: "QDate_year".}
proc fcQDate_month(self: pointer): cint {.importc: "QDate_month".}
proc fcQDate_day(self: pointer): cint {.importc: "QDate_day".}
proc fcQDate_dayOfWeek(self: pointer): cint {.importc: "QDate_dayOfWeek".}
proc fcQDate_dayOfYear(self: pointer): cint {.importc: "QDate_dayOfYear".}
proc fcQDate_daysInMonth(self: pointer): cint {.importc: "QDate_daysInMonth".}
proc fcQDate_daysInYear(self: pointer): cint {.importc: "QDate_daysInYear".}
proc fcQDate_weekNumber(self: pointer): cint {.importc: "QDate_weekNumber".}
proc fcQDate_yearCal(self: pointer, cal: pointer): cint {.importc: "QDate_year_cal".}
proc fcQDate_monthCal(self: pointer, cal: pointer): cint {.importc: "QDate_month_cal".}
proc fcQDate_dayCal(self: pointer, cal: pointer): cint {.importc: "QDate_day_cal".}
proc fcQDate_dayOfWeekCal(self: pointer, cal: pointer): cint {.importc: "QDate_dayOfWeek_cal".}
proc fcQDate_dayOfYearCal(self: pointer, cal: pointer): cint {.importc: "QDate_dayOfYear_cal".}
proc fcQDate_daysInMonthCal(self: pointer, cal: pointer): cint {.importc: "QDate_daysInMonth_cal".}
proc fcQDate_daysInYearCal(self: pointer, cal: pointer): cint {.importc: "QDate_daysInYear_cal".}
proc fcQDate_startOfDaySpec(self: pointer, spec: cint): pointer {.importc: "QDate_startOfDay_spec".}
proc fcQDate_endOfDaySpec(self: pointer, spec: cint): pointer {.importc: "QDate_endOfDay_spec".}
proc fcQDate_startOfDayZone(self: pointer, zone: pointer): pointer {.importc: "QDate_startOfDay_zone".}
proc fcQDate_endOfDayZone(self: pointer, zone: pointer): pointer {.importc: "QDate_endOfDay_zone".}
proc fcQDate_startOfDay(self: pointer): pointer {.importc: "QDate_startOfDay".}
proc fcQDate_endOfDay(self: pointer): pointer {.importc: "QDate_endOfDay".}
proc fcQDate_toString(self: pointer): struct_seaqt_string {.importc: "QDate_toString".}
proc fcQDate_toString_QString(self: pointer, format: struct_seaqt_string): struct_seaqt_string {.importc: "QDate_toString_QString".}
proc fcQDate_toString_QString_QCalendar(self: pointer, format: struct_seaqt_string, cal: pointer): struct_seaqt_string {.importc: "QDate_toString_QString_QCalendar".}
proc fcQDate_setDateYearMonthDay(self: pointer, year: cint, month: cint, day: cint): bool {.importc: "QDate_setDate_year_month_day".}
proc fcQDate_setDateYearMonthDayCal(self: pointer, year: cint, month: cint, day: cint, cal: pointer): bool {.importc: "QDate_setDate_year_month_day_cal".}
proc fcQDate_getDate(self: pointer, year: ptr cint, month: ptr cint, day: ptr cint): void {.importc: "QDate_getDate".}
proc fcQDate_addDays(self: pointer, days: clonglong): pointer {.importc: "QDate_addDays".}
proc fcQDate_addMonthsMonths(self: pointer, months: cint): pointer {.importc: "QDate_addMonths_months".}
proc fcQDate_addYearsYears(self: pointer, years: cint): pointer {.importc: "QDate_addYears_years".}
proc fcQDate_addMonthsMonthsCal(self: pointer, months: cint, cal: pointer): pointer {.importc: "QDate_addMonths_months_cal".}
proc fcQDate_addYearsYearsCal(self: pointer, years: cint, cal: pointer): pointer {.importc: "QDate_addYears_years_cal".}
proc fcQDate_daysTo(self: pointer, d: pointer): clonglong {.importc: "QDate_daysTo".}
proc fcQDate_currentDate(): pointer {.importc: "QDate_currentDate".}
proc fcQDate_fromString_QString(stringVal: struct_seaqt_string): pointer {.importc: "QDate_fromString_QString".}
proc fcQDate_fromString_QString_QString_QCalendar(stringVal: struct_seaqt_string, format: struct_seaqt_string, cal: pointer): pointer {.importc: "QDate_fromString_QString_QString_QCalendar".}
proc fcQDate_fromString_QString_QString(stringVal: struct_seaqt_string, format: struct_seaqt_string): pointer {.importc: "QDate_fromString_QString_QString".}
proc fcQDate_fromString_QString_QStringInt_QCalendar(stringVal: struct_seaqt_string, format: struct_seaqt_string, baseYear: cint, cal: pointer): pointer {.importc: "QDate_fromString_QString_QString_int_QCalendar".}
proc fcQDate_isValidYMD(y: cint, m: cint, d: cint): bool {.importc: "QDate_isValid_y_m_d".}
proc fcQDate_isLeapYear(year: cint): bool {.importc: "QDate_isLeapYear".}
proc fcQDate_fromJulianDay(jd_x: clonglong): pointer {.importc: "QDate_fromJulianDay".}
proc fcQDate_toJulianDay(self: pointer): clonglong {.importc: "QDate_toJulianDay".}
proc fcQDate_weekNumberYearNum(self: pointer, yearNum: ptr cint): cint {.importc: "QDate_weekNumber_yearNum".}
proc fcQDate_startOfDaySpecOffsetSeconds(self: pointer, spec: cint, offsetSeconds: cint): pointer {.importc: "QDate_startOfDay_spec_offsetSeconds".}
proc fcQDate_endOfDaySpecOffsetSeconds(self: pointer, spec: cint, offsetSeconds: cint): pointer {.importc: "QDate_endOfDay_spec_offsetSeconds".}
proc fcQDate_toString_Qt_DateFormat(self: pointer, format: cint): struct_seaqt_string {.importc: "QDate_toString_Qt_DateFormat".}
proc fcQDate_fromString_QString_Qt_DateFormat(stringVal: struct_seaqt_string, format: cint): pointer {.importc: "QDate_fromString_QString_Qt_DateFormat".}
proc fcQDate_fromString_QString_QStringInt(stringVal: struct_seaqt_string, format: struct_seaqt_string, baseYear: cint): pointer {.importc: "QDate_fromString_QString_QString_int".}
proc fcQDate_new(): ptr cQDate {.importc: "QDate_new".}
proc fcQDate_new2(y: cint, m: cint, d: cint): ptr cQDate {.importc: "QDate_new_y_m_d".}
proc fcQDate_new3(y: cint, m: cint, d: cint, cal: pointer): ptr cQDate {.importc: "QDate_new_y_m_d_cal".}
proc fcQDate_new4(fromVal: pointer): ptr cQDate {.importc: "QDate_new_from".}
proc fcQTime_isNull(self: pointer): bool {.importc: "QTime_isNull".}
proc fcQTime_isValid(self: pointer): bool {.importc: "QTime_isValid".}
proc fcQTime_hour(self: pointer): cint {.importc: "QTime_hour".}
proc fcQTime_minute(self: pointer): cint {.importc: "QTime_minute".}
proc fcQTime_second(self: pointer): cint {.importc: "QTime_second".}
proc fcQTime_msec(self: pointer): cint {.importc: "QTime_msec".}
proc fcQTime_toString(self: pointer): struct_seaqt_string {.importc: "QTime_toString".}
proc fcQTime_toString_QString(self: pointer, format: struct_seaqt_string): struct_seaqt_string {.importc: "QTime_toString_QString".}
proc fcQTime_setHMSHMS(self: pointer, h: cint, m: cint, s: cint): bool {.importc: "QTime_setHMS_h_m_s".}
proc fcQTime_addSecs(self: pointer, secs: cint): pointer {.importc: "QTime_addSecs".}
proc fcQTime_secsTo(self: pointer, t: pointer): cint {.importc: "QTime_secsTo".}
proc fcQTime_addMSecs(self: pointer, ms: cint): pointer {.importc: "QTime_addMSecs".}
proc fcQTime_msecsTo(self: pointer, t: pointer): cint {.importc: "QTime_msecsTo".}
proc fcQTime_fromMSecsSinceStartOfDay(msecs: cint): pointer {.importc: "QTime_fromMSecsSinceStartOfDay".}
proc fcQTime_msecsSinceStartOfDay(self: pointer): cint {.importc: "QTime_msecsSinceStartOfDay".}
proc fcQTime_currentTime(): pointer {.importc: "QTime_currentTime".}
proc fcQTime_fromString_QString(stringVal: struct_seaqt_string): pointer {.importc: "QTime_fromString_QString".}
proc fcQTime_fromString_QString_QString(stringVal: struct_seaqt_string, format: struct_seaqt_string): pointer {.importc: "QTime_fromString_QString_QString".}
proc fcQTime_isValidHMS(h: cint, m: cint, s: cint): bool {.importc: "QTime_isValid_h_m_s".}
proc fcQTime_toString_Qt_DateFormat(self: pointer, f: cint): struct_seaqt_string {.importc: "QTime_toString_Qt_DateFormat".}
proc fcQTime_setHMSHMSMs(self: pointer, h: cint, m: cint, s: cint, ms: cint): bool {.importc: "QTime_setHMS_h_m_s_ms".}
proc fcQTime_fromString_QString_Qt_DateFormat(stringVal: struct_seaqt_string, format: cint): pointer {.importc: "QTime_fromString_QString_Qt_DateFormat".}
proc fcQTime_isValidHMSMs(h: cint, m: cint, s: cint, ms: cint): bool {.importc: "QTime_isValid_h_m_s_ms".}
proc fcQTime_new(): ptr cQTime {.importc: "QTime_new".}
proc fcQTime_new2(h: cint, m: cint): ptr cQTime {.importc: "QTime_new_h_m".}
proc fcQTime_new3(fromVal: pointer): ptr cQTime {.importc: "QTime_new_from".}
proc fcQTime_new4(h: cint, m: cint, s: cint): ptr cQTime {.importc: "QTime_new_h_m_s".}
proc fcQTime_new5(h: cint, m: cint, s: cint, ms: cint): ptr cQTime {.importc: "QTime_new_h_m_s_ms".}
proc fcQDateTime_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QDateTime_operatorAssign".}
proc fcQDateTime_swap(self: pointer, other: pointer): void {.importc: "QDateTime_swap".}
proc fcQDateTime_isNull(self: pointer): bool {.importc: "QDateTime_isNull".}
proc fcQDateTime_isValid(self: pointer): bool {.importc: "QDateTime_isValid".}
proc fcQDateTime_date(self: pointer): pointer {.importc: "QDateTime_date".}
proc fcQDateTime_time(self: pointer): pointer {.importc: "QDateTime_time".}
proc fcQDateTime_timeSpec(self: pointer): cint {.importc: "QDateTime_timeSpec".}
proc fcQDateTime_offsetFromUtc(self: pointer): cint {.importc: "QDateTime_offsetFromUtc".}
proc fcQDateTime_timeRepresentation(self: pointer): pointer {.importc: "QDateTime_timeRepresentation".}
proc fcQDateTime_timeZone(self: pointer): pointer {.importc: "QDateTime_timeZone".}
proc fcQDateTime_timeZoneAbbreviation(self: pointer): struct_seaqt_string {.importc: "QDateTime_timeZoneAbbreviation".}
proc fcQDateTime_isDaylightTime(self: pointer): bool {.importc: "QDateTime_isDaylightTime".}
proc fcQDateTime_toMSecsSinceEpoch(self: pointer): clonglong {.importc: "QDateTime_toMSecsSinceEpoch".}
proc fcQDateTime_toSecsSinceEpoch(self: pointer): clonglong {.importc: "QDateTime_toSecsSinceEpoch".}
proc fcQDateTime_setDateDate(self: pointer, date: pointer): void {.importc: "QDateTime_setDate_date".}
proc fcQDateTime_setTimeTime(self: pointer, time: pointer): void {.importc: "QDateTime_setTime_time".}
proc fcQDateTime_setTimeSpec(self: pointer, spec: cint): void {.importc: "QDateTime_setTimeSpec".}
proc fcQDateTime_setOffsetFromUtc(self: pointer, offsetSeconds: cint): void {.importc: "QDateTime_setOffsetFromUtc".}
proc fcQDateTime_setTimeZoneToZone(self: pointer, toZone: pointer): void {.importc: "QDateTime_setTimeZone_toZone".}
proc fcQDateTime_setMSecsSinceEpoch(self: pointer, msecs: clonglong): void {.importc: "QDateTime_setMSecsSinceEpoch".}
proc fcQDateTime_setSecsSinceEpoch(self: pointer, secs: clonglong): void {.importc: "QDateTime_setSecsSinceEpoch".}
proc fcQDateTime_toString(self: pointer): struct_seaqt_string {.importc: "QDateTime_toString".}
proc fcQDateTime_toString_QString(self: pointer, format: struct_seaqt_string): struct_seaqt_string {.importc: "QDateTime_toString_QString".}
proc fcQDateTime_toString_QString_QCalendar(self: pointer, format: struct_seaqt_string, cal: pointer): struct_seaqt_string {.importc: "QDateTime_toString_QString_QCalendar".}
proc fcQDateTime_addDays(self: pointer, days: clonglong): pointer {.importc: "QDateTime_addDays".}
proc fcQDateTime_addMonths(self: pointer, months: cint): pointer {.importc: "QDateTime_addMonths".}
proc fcQDateTime_addYears(self: pointer, years: cint): pointer {.importc: "QDateTime_addYears".}
proc fcQDateTime_addSecs(self: pointer, secs: clonglong): pointer {.importc: "QDateTime_addSecs".}
proc fcQDateTime_addMSecs(self: pointer, msecs: clonglong): pointer {.importc: "QDateTime_addMSecs".}
proc fcQDateTime_toTimeSpec(self: pointer, spec: cint): pointer {.importc: "QDateTime_toTimeSpec".}
proc fcQDateTime_toLocalTime(self: pointer): pointer {.importc: "QDateTime_toLocalTime".}
proc fcQDateTime_toUTC(self: pointer): pointer {.importc: "QDateTime_toUTC".}
proc fcQDateTime_toOffsetFromUtc(self: pointer, offsetSeconds: cint): pointer {.importc: "QDateTime_toOffsetFromUtc".}
proc fcQDateTime_toTimeZone(self: pointer, toZone: pointer): pointer {.importc: "QDateTime_toTimeZone".}
proc fcQDateTime_daysTo(self: pointer, param1: pointer): clonglong {.importc: "QDateTime_daysTo".}
proc fcQDateTime_secsTo(self: pointer, param1: pointer): clonglong {.importc: "QDateTime_secsTo".}
